feat(shopping): add Category repo, dto, service, controller and update remaining modules