@@ -3,162 +3,186 @@ package com.nguyenvu.thymeleafjpashopping.service;
 import com.nguyenvu.thymeleafjpashopping.dto.CommentDTO;
 import com.nguyenvu.thymeleafjpashopping.dto.OrderLineDTO;
 import com.nguyenvu.thymeleafjpashopping.dto.ProductDTO;
+import com.nguyenvu.thymeleafjpashopping.model.Category;
 import com.nguyenvu.thymeleafjpashopping.model.Comment;
 import com.nguyenvu.thymeleafjpashopping.model.OrderLine;
 import com.nguyenvu.thymeleafjpashopping.model.Product;
+import com.nguyenvu.thymeleafjpashopping.repository.CategoryRepository;
 import com.nguyenvu.thymeleafjpashopping.repository.OrderLineRepository;
 import com.nguyenvu.thymeleafjpashopping.repository.ProductRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 @Transactional
 public class ProductService {
+    
     private final ProductRepository productRepository;
+    private final CategoryRepository categoryRepository;
     private final OrderLineRepository orderLineRepository;
-
-    public ProductService(ProductRepository productRepository, OrderLineRepository orderLineRepository) {
-        this.productRepository = productRepository;
-        this.orderLineRepository = orderLineRepository;
-    }
+    private final CommentService commentService;
 
     @Transactional(readOnly = true)
     public List<ProductDTO> getAllProducts() {
         return productRepository.findAll().stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public ProductDTO getProductById(Integer id) {
-        Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+    public ProductDTO getProductById(Long productId) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
         return convertToDTO(product);
     }
 
     public ProductDTO createProduct(ProductDTO productDTO) {
-        Product product = Product.builder()
-                .name(productDTO.getName())
-                .price(productDTO.getPrice())
-                .inStock(productDTO.isInStock())
-                .build();
-
-        if(productDTO.getComments() != null) {
-            productDTO.getComments().stream()
-                    .filter(Objects::nonNull)
-                    .map(this::convertToEntity)
-                    .forEach(product::addComment);
-        } else product.setComments(null);
-
-        if(productDTO.getOrderLines() != null) {
-            productDTO.getOrderLines().stream()
-                    .filter(Objects::nonNull)
-                    .map(olDto -> convertToEntity(olDto, product))
-                    .forEach(product::addOrderLine);
-        } else product.setOrderLines(null);
+        Category category = categoryRepository.findById(productDTO.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found with id: " + productDTO.getCategoryId()));
+        
+        Product product = new Product();
+        product.setName(productDTO.getName());
+        product.setDescription(productDTO.getDescription());
+        product.setPrice(productDTO.getPrice());
+        product.setInStock(productDTO.getInStock() != null ? productDTO.getInStock() : true);
+        product.setStock(productDTO.getStock() != null ? productDTO.getStock() : 0);
+        product.setImageUrl(productDTO.getImageUrl());
+        product.setCategory(category);
 
         return convertToDTO(productRepository.save(product));
     }
 
-    public ProductDTO updateProduct(ProductDTO productDTO) {
-        Product product = productRepository.findById(productDTO.getId()).orElse(null);
-        if(product == null) return null;
+    public ProductDTO updateProduct(Long productId, ProductDTO productDTO) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
 
         product.setName(productDTO.getName());
+        product.setDescription(productDTO.getDescription());
         product.setPrice(productDTO.getPrice());
-        product.setInStock(productDTO.isInStock());
+        product.setInStock(productDTO.getInStock());
+        product.setStock(productDTO.getStock());
+        product.setImageUrl(productDTO.getImageUrl());
+        
+        if (productDTO.getCategoryId() != null && !product.getCategory().getCategoryId().equals(productDTO.getCategoryId())) {
+            Category category = categoryRepository.findById(productDTO.getCategoryId())
+                    .orElseThrow(() -> new RuntimeException("Category not found with id: " + productDTO.getCategoryId()));
+            product.setCategory(category);
+        }
 
         return convertToDTO(productRepository.save(product));
     }
 
-    public void deleteProduct(Integer id) {
-        productRepository.findById(id).ifPresent(productRepository::delete);
+    public void deleteProduct(Long productId) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
+        productRepository.delete(product);
     }
 
+    @Transactional(readOnly = true)
     public List<ProductDTO> getProductsByPriceBetween(BigDecimal low, BigDecimal high) {
         return productRepository.findByPriceBetween(low, high).stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public List<ProductDTO> getProductsByPriceGreaterThan(BigDecimal low) {
         return productRepository.findByPriceGreaterThan(low).stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public List<ProductDTO> getProductsPriceLessThan(BigDecimal low) {
         return productRepository.findByPriceLessThan(low).stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public List<ProductDTO> getProductsByNameContaining(String name) {
         return productRepository.findByNameContainingIgnoreCase(name).stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-//    Convert to DTO helper
+    @Transactional(readOnly = true)
+    public List<ProductDTO> getProductsByCategoryId(Long categoryId) {
+        return productRepository.findByCategoryCategoryId(categoryId).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<ProductDTO> getInStockProducts() {
+        return productRepository.findByInStockTrue().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    public void updateStock(Long productId, Integer quantity) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
+        
+        int newStock = product.getStock() - quantity;
+        if (newStock < 0) {
+            throw new RuntimeException("Insufficient stock for product: " + product.getName());
+        }
+        
+        product.setStock(newStock);
+        product.setInStock(newStock > 0);
+        productRepository.save(product);
+    }
+
     private ProductDTO convertToDTO(Product product) {
         if (product == null) {
             return null;
         }
-        return ProductDTO.builder()
-                .id(product.getId())
+        
+        ProductDTO dto = ProductDTO.builder()
+                .productId(product.getProductId())
                 .name(product.getName())
+                .description(product.getDescription())
                 .price(product.getPrice())
-                .inStock(product.isInStock())
+                .inStock(product.getInStock())
+                .stock(product.getStock())
+                .imageUrl(product.getImageUrl())
+                .categoryId(product.getCategory().getCategoryId())
+                .categoryName(product.getCategory().getName())
                 .commentCount(product.getComments() != null ? product.getComments().size() : 0)
-                .comments(product.getComments() != null ? product.getComments().stream()
-                        .map(this::convertToDTO)
-                        .toList() : null)
                 .orderLineCount(product.getOrderLines() != null ? product.getOrderLines().size() : 0)
-                .orderLines(product.getOrderLines() != null ? product.getOrderLines().stream()
-                        .map(this::convertToDTO).collect(Collectors.toSet()) : null)
                 .build();
-    }
-
-    private CommentDTO convertToDTO(Comment comment) {
-        return CommentDTO.builder()
-                .commentId(comment.getId())
-                .text(comment.getText())
-                .productId(comment.getProduct().getId())
-                .productName(comment.getProduct().getName())
-                .build();
+        
+        // Calculate average rating
+        if (product.getComments() != null && !product.getComments().isEmpty()) {
+            double avgRating = product.getComments().stream()
+                    .mapToInt(Comment::getRating)
+                    .average()
+                    .orElse(0.0);
+            dto.setAverageRating(avgRating);
+        }
+        
+        return dto;
     }
 
     private OrderLineDTO convertToDTO(OrderLine orderLine) {
         return OrderLineDTO.builder()
-                .orderLineId(orderLine.getId())
-                .amount(orderLine.getAmount())
-                .purchasePrice(orderLine.getPurchasePrice())
-                .orderId(orderLine.getOrder().getId())
-                .orderDate(orderLine.getOrder().getDate())
-                .productId(orderLine.getProduct().getId())
+                .orderLineId(orderLine.getOrderLineId())
+                .quantity(orderLine.getQuantity())
+                .unitPrice(orderLine.getUnitPrice())
+                .subtotal(orderLine.getSubtotal())
+                .orderId(orderLine.getOrder().getOrderId())
+                .orderDate(orderLine.getOrder().getOrderDate())
+                .orderStatus(orderLine.getOrder().getStatus())
+                .productId(orderLine.getProduct().getProductId())
                 .productName(orderLine.getProduct().getName())
-                .build();
-    }
-
-    private OrderLine convertToEntity(OrderLineDTO orderLineDTO, Product product) {
-        return OrderLine.builder()
-                .amount(orderLineDTO.getAmount())
-                .purchasePrice(orderLineDTO.getPurchasePrice())
-                .product(product)
-                .build();
-    }
-
-    private Comment convertToEntity(CommentDTO commentDTO) {
-        return Comment.builder()
-                .text(commentDTO.getText())
-                .product(commentDTO.getProductId() != null ?
-                        productRepository.getReferenceById(commentDTO.getProductId())
-                        : null)
+                .productImageUrl(orderLine.getProduct().getImageUrl())
                 .build();
     }
 }
